--- a/src/StartupProjectManager.Ui/ShellView.xaml
+++ b/src/StartupProjectManager.Ui/ShellView.xaml
@@ -1,13 +1,15 @@
-<Window xmlns:syncfusion="http://schemas.syncfusion.com/wpf"  x:Class="StartupProjectManager.Ui.Views.ShellView"
+<Window xmlns:syncfusion="http://schemas.syncfusion.com/wpf"  x:Class="StartupProjectManager.Ui.ShellView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:StartupProjectManager.Ui.Views"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
-             Title="{Binding Path=Title}">
+             Title="{Binding Path=Title}"
+             Icon="Images/AppIcon.ico">
     <Grid>
-        <ContentControl x:Name="ContentConductorViewModel"/>
+        <ContentControl x:Name="ActiveItem"/>
+        
+
     </Grid>
 </Window>
