--- a/src/StartupProjectManager.Ui/UiParts/Content/Views/ContentConductorView.xaml
+++ b/src/StartupProjectManager.Ui/UiParts/Content/Views/ContentConductorView.xaml
@@ -7,41 +7,48 @@
              xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
+
+
+    <Grid Name="ContentGrid" Grid.Row="1">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition />
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition />
+        </Grid.ColumnDefinitions>
+
         <Grid.RowDefinitions>
-            <RowDefinition Height="15"/>
+            <RowDefinition Height="25"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="15"/>
         </Grid.RowDefinitions>
 
-        <ContentControl x:Name="MenuControl" Grid.Row="0"/>
+        <ContentControl x:Name="MenuBarViewModel"
+                        Grid.Row="0"
+                        Grid.Column="0"
+                        Grid.ColumnSpan="3"/>
 
-        <Grid Name="ContentGrid" Grid.Row="1">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition />
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition />
-            </Grid.ColumnDefinitions>
+        <!--Column 0-->
+        <ContentControl x:Name="ProjectTreeViewModel"
+                        Grid.Column="0"
+                        Grid.Row="1"
+                        HorizontalAlignment="Stretch"
+                        VerticalAlignment="Stretch"/>
 
-            <!--Column 0-->
-            <ContentControl x:Name="ProjectTree"
-                            Grid.Column="0"
-                            HorizontalAlignment="Stretch"
-                            VerticalAlignment="Stretch"/>
+        <!--Colum 1-->
+        <syncfusion:SfGridSplitter Grid.Column="1"
+                                   Grid.Row="1"
+                                   VerticalAlignment="Stretch"
+                                   Width="Auto"
+                                   ResizeBehavior="PreviousAndNext"
+                                   EnableCollapseButton="True"/>
 
-            <!--Colum 1-->
-            <syncfusion:SfGridSplitter Grid.Column="1"
-                                       VerticalAlignment="Stretch"
-                                       Width="Auto"
-                                       ResizeBehavior="PreviousAndNext"
-                                       EnableCollapseButton="True"/>
+        <!--Columne 2-->
+        <ContentControl x:Name="DetailConductorViewModel"
+                        Grid.Column="2"
+                        Grid.Row="1"
+                        HorizontalAlignment="Stretch"
+                        VerticalAlignment="Stretch"/>
 
-            <!--Columne 2-->
-            <ContentControl x:Name="DetailView"
-                            Grid.Column="2"
-                            HorizontalAlignment="Stretch"
-                            VerticalAlignment="Stretch"/>
-
-        </Grid>
     </Grid>
+
 </UserControl>
