--- a/src/StartupProjectManager.Ui/UiParts/MenuBar/Views/MenuBarView.xaml
+++ b/src/StartupProjectManager.Ui/UiParts/MenuBar/Views/MenuBarView.xaml
@@ -3,14 +3,19 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:StartupProjectManager.Ui.Views"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:cal="http://www.caliburnproject.org"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <syncfusion:MenuAdv >
-            <syncfusion:MenuItemAdv Header="FileMenu">
-                <syncfusion:MenuItemAdv x:Name="FileMenuNew" Header="FileMenu" Icon="{StaticResource Add}"/>
+            <syncfusion:MenuItemAdv Header="File">
+                <syncfusion:MenuItemAdv Header="New"
+                                        cal:Message.Attach="[Event Click] = [Action FileMenuNew()]">
+                    <syncfusion:MenuItemAdv.Icon>
+                        <Image Source="../../../Images/Add.png"/>
+                    </syncfusion:MenuItemAdv.Icon>
+                </syncfusion:MenuItemAdv>
             </syncfusion:MenuItemAdv>
         </syncfusion:MenuAdv>
     </Grid>
