--- a/src/StartupProjectManager.Ui/UiParts/ProjectTree/Views/ProjectTreeView.xaml
+++ b/src/StartupProjectManager.Ui/UiParts/ProjectTree/Views/ProjectTreeView.xaml
@@ -3,23 +3,53 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:cal="http://www.caliburnproject.org"
+             xmlns:converters="clr-namespace:StartupProjectManager.Ui.Converters"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
-             Background="Aqua">
+             >
+    <UserControl.Resources>
+        <converters:ByteArrayToBitmapImageConverter x:Name="binaryConverter" x:Key="ByteToImageConverter"/>
+    </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="15"/>
+            <RowDefinition Height="30"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <syncfusion:ToolBarAdv Grid.Row="0">
-
-            <syncfusion:MenuItemAdv x:Name="AddProjectItem" Icon="{StaticResource Add}"/>
-            <syncfusion:MenuItemAdv x:Name="AddSubProjectItem" Icon="{StaticResource AddSub}"/>
+        <syncfusion:ToolBarAdv Grid.Row="0"
+                               Padding="0">
+            <Button BorderThickness="0"
+                    Background="Transparent"
+                    cal:Message.Attach="[Event Click] = [Action AddProjectItem()]"
+                    Width="22"
+                    Height="20">
+                <Image Source="../../../Images/Add.png" Width="18" Height="18"/>
+            </Button>
+            <Button BorderThickness="0"
+                    Background="Transparent"
+                    cal:Message.Attach="[Event Click] = [Action AddSubProjectItem()]"
+                    Width="22"
+                    Height="20">
+                <Image Source="../../../Images/AddSub.png" Width="18" Height="18" />
+            </Button>
+            
         </syncfusion:ToolBarAdv>
 
+        
+
         <syncfusion:TreeViewAdv x:Name="ProjectItems"
+                                ItemsSource="{Binding ProjectItems}"
                                 SelectedTreeItem="{Binding Path=SelectedProjectItem, Mode=OneWayToSource}"
-                                Grid.Row="1"/>   
+                                Grid.Row="1">
+            <syncfusion:TreeViewAdv.ItemTemplate>
+                <HierarchicalDataTemplate ItemsSource="{Binding ChildProjectItems}">
+                    <StackPanel Orientation="Horizontal">
+                        <Image Source="{Binding ItemType_Icon, Converter={StaticResource ByteToImageConverter}}"></Image>
+                        <Label Content="{Binding Name}"/>
+                    </StackPanel>
+                </HierarchicalDataTemplate>
+            </syncfusion:TreeViewAdv.ItemTemplate>
+        </syncfusion:TreeViewAdv>
     </Grid>
 </UserControl>
